--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-database.js"></script>
 
 
     <script>
-      //Your web app's Firebase configuration
+      // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
+        apiKey: "AIzaSyAcAf79S6Ig7bjfdIi5YFw1xSzmKUf8lGU",
+        authDomain: "c-35-cb13e.firebaseapp.com",
+        databaseURL: "https://c-35-cb13e-default-rtdb.firebaseio.com",
+        projectId: "c-35-cb13e",
+        storageBucket: "c-35-cb13e.appspot.com",
+        messagingSenderId: "801330646191",
+        appId: "1:801330646191:web:1cc98b552d301e3952985a"
       };
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
 
     <script src="js/Player.js"></script>
